Fix: Explicitly force Webpack in vercel.json and loose build checks

--- a/frontend/nextjs-app/vercel.json
+++ b/frontend/nextjs-app/vercel.json
@@ -1,5 +1,5 @@
 {
-    "buildCommand": "next build",
+    "buildCommand": "next build --webpack",
     "installCommand": "npm install --legacy-peer-deps",
     "outputDirectory": ".next",
     "framework": "nextjs"
