--- a/frontend/nextjs-app/package.json
+++ b/frontend/nextjs-app/package.json
@@ -16,7 +16,7 @@
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.98.4",
     "buffer": "^6.0.3",
-    "next": "16.1.6",
+    "next": "^15.1.7",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
@@ -26,7 +26,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.1.6",
+    "eslint-config-next": "^15.1.7",
     "tailwindcss": "^4",
     "typescript": "^5"
   },
