Refactor Gov Encrypt: Architecture restructure, Frontend Hardening, Arcium Integration, and Confidential Features

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,5 @@
 {
-    "buildCommand": "next build --webpack",
+    "buildCommand": "next build",
     "installCommand": "npm install --legacy-peer-deps",
     "outputDirectory": ".next",
     "framework": "nextjs"
