--- a/relayer/package.json
+++ b/relayer/package.json
@@ -10,10 +10,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@project-serum/anchor": "^0.26.0",
+    "@coral-xyz/anchor": "^0.30.1",
     "@solana/web3.js": "^1.98.4",
-    "dotenv": "^17.3.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.17",
+    "@types/node": "^20.11.24"
   }
 }
