feat: overhaul DAO frontend with Snapshot-inspired UI and soft pastel theme

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -26,11 +26,14 @@
     "paths": {
       "@/*": [
         "./*"
+      ],
+      "next/*": [
+        "../node_modules/next/*"
+      ],
+      "next": [
+        "../node_modules/next"
       ]
-    },
-    "types": [
-      "node"
-    ]
+    }
   },
   "include": [
     "next-env.d.ts",
