--- a/mxe-node/package.json
+++ b/mxe-node/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "arcium-relayer",
+  "name": "gov-encrypt-mxe-node",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
