--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,21 +11,22 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@solana/wallet-adapter-base": "^0.9.23",
-    "@solana/wallet-adapter-react": "^0.15.35",
-    "@solana/wallet-adapter-react-ui": "^0.9.35",
-    "@solana/wallet-adapter-wallets": "^0.19.32",
+    "@coral-xyz/anchor": "^0.30.1",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@solana/wallet-adapter-base": "^0.9.27",
+    "@solana/wallet-adapter-react": "^0.15.39",
+    "@solana/wallet-adapter-react-ui": "^0.9.39",
+    "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "^1.98.4",
     "buffer": "^6.0.3",
-    "next": "^15.1.7",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
-    "lucide-react": "^0.475.0",
-    "framer-motion": "^12.0.0",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.0",
     "class-variance-authority": "^0.7.0",
-    "@radix-ui/react-slot": "^1.0.2"
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.0.0",
+    "lucide-react": "^0.475.0",
+    "next": "^15.1.7",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "tailwind-merge": "^2.6.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -36,9 +37,5 @@
     "eslint-config-next": "^15.1.7",
     "tailwindcss": "^4",
     "typescript": "^5"
-  },
-  "overrides": {
-    "react": "19.2.3",
-    "react-dom": "19.2.3"
   }
 }
