--- a/Anchor.toml
+++ b/Anchor.toml
@@ -5,7 +5,7 @@ seeds = false
 skip-lint = false
 
 [programs.devnet]
-gov_encrypt = "PLACEHOLDER_PROGRAM_ID"
+gov_encrypt = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
 
 [registry]
 url = "https://api.devnet.solana.com"
