--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "node": ">=18"
   },
   "dependencies": {
+    "@arcium-hq/client": "^0.8.4",
     "@coral-xyz/anchor": "^0.30.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@solana/wallet-adapter-base": "^0.9.23",
