--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -16,4 +16,6 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = "0.29.0"
+anchor-lang = "0.30.1"
+arcis = { git = "https://github.com/arcium-hq/arcis" }
+arcium-anchor = { git = "https://github.com/arcium-hq/arcium-anchor" }
