--- a/relayer/package.json
+++ b/relayer/package.json
@@ -6,9 +6,9 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "0.29.0",
-    "@solana/web3.js": "1.87.6",
-    "bn.js": "5.2.1",
+    "@coral-xyz/anchor": "^0.30.1",
+    "@solana/web3.js": "^1.91.0",
+    "bn.js": "^5.2.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
